@@ -3,6 +3,10 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.11...]
+### 2018-10-11
+	Added: Option to mute network error logging (Configuration > Logging > Show network errors).
+		This can get really spammy on certain networks without this option.
+	Changed: Network errors are now immediately shown and they will stop showing after 5 consecutive reports.
 ### 2018-10-10
 	Fixed: Errors that output stacktraces cause only 1 fatal error instead of 3.
 	Added: Self-maintenance to run garbage collector once a day at midnight.
